--- a/kernels/plugins/cyt_adapter/Makefile
+++ b/kernels/plugins/cyt_adapter/Makefile
@@ -17,15 +17,14 @@
 
 TARGET=ip
 DEVICE=xcu250-figd2104-2L-e
-CYT_DMA_ADAPTER=cyt_dma_adapter.xo
-CYT_RDMA_ARBITER=cyt_rdma_arbiter.xo
-CYT_RDMA_MUX=cyt_rdma_mux.xo
-STACK_TYPE ?= UDP
+CYT_DMA_ADAPTER=cyt_dma_adapter_$(DEVICE).xo
+CYT_RDMA_ARBITER=cyt_rdma_arbiter_$(DEVICE).xo
+CYT_RDMA_MUX=cyt_rdma_mux_$(DEVICE).xo
 
 all: $(CYT_DMA_ADAPTER) $(CYT_RDMA_ARBITER) $(CYT_RDMA_MUX)
 
 $(CYT_DMA_ADAPTER): build_cyt_dma_adapter.tcl cyt_dma_adapter.cpp
-	vitis_hls $< -tclargs $(TARGET) $(DEVICE) $(STACK_TYPE)
+	vitis_hls $< -tclargs $(TARGET) $(DEVICE)
 
 $(CYT_RDMA_ARBITER): build_cyt_rdma_arbiter.tcl cyt_rdma_arbiter.cpp
 	vitis_hls $< -tclargs $(TARGET) $(DEVICE)
