--- a/kernels/cclo/Makefile
+++ b/kernels/cclo/Makefile
@@ -18,6 +18,7 @@
 PLATFORM ?= xilinx_u280_xdma_201920_3
 HW_DEBUG ?= none
 STACK_TYPE ?= UDP
+MODE ?= xo
 EN_DMA ?= 1
 EN_ARITH ?= 1
 EN_COMPRESS ?= 1
@@ -27,6 +28,14 @@ SIM_MEM_SIZE_LOG ?= 28
 SIM_MEM_LATENCY ?= 50
 
 FW_SOURCES = $(shell find fw -name '*.c') $(shell find fw -name '*.h') $(shell find fw -name '*.tcl')
+
+ifeq ($(MODE), simdll)
+	EN_DMA=1
+	EN_ARITH=1
+	EN_COMPRESS=1
+	EN_EXT_KRNL=1
+	MB_DEBUG_LEVEL=0
+endif
 
 ifeq (u250,$(findstring u250, $(PLATFORM)))
 	FPGAPART=xcu250-figd2104-2L-e
@@ -50,7 +59,14 @@ endif
 COMMIT_HASH := 0x$(shell git rev-parse HEAD | cut -c 1-6)
 GEN_KERNEL_TCL := tcl/generate_kernel.tcl
 REBUILD_BD_TCL := tcl/rebuild_bd.tcl tcl/control_bd.tcl tcl/rx_bd.tcl tcl/tx_bd.tcl
-BUILD_FOLDER = "$(STACK_TYPE)_$(EN_DMA)$(EN_ARITH)$(EN_COMPRESS)$(EN_EXT_KRNL)$(MB_DEBUG_LEVEL)_$(FPGAPART)"
+
+ifeq ($(MODE), simdll)
+	FPGAPART=xcu280-fsvh2892-2L-e
+	BOARD=u280
+	BUILD_FOLDER = $(STACK_TYPE)_sim
+else
+	BUILD_FOLDER = $(STACK_TYPE)_$(EN_DMA)$(EN_ARITH)$(EN_COMPRESS)$(EN_EXT_KRNL)$(MB_DEBUG_LEVEL)_$(FPGAPART)
+endif
 
 CCLO_ELF=$(BUILD_FOLDER)/vitis_ws/ccl_offload_control/Debug/ccl_offload_control.elf
 CCLO_SIMDLL=$(BUILD_FOLDER)/ccl_offload_ex/ccl_offload_ex.sim/sim_1/behav/xsim/xsim.dir/ccl_offload_behav/xsimk.so
@@ -58,7 +74,12 @@ CCLO_XSA=$(BUILD_FOLDER)/ccl_offload.xsa
 CCLO_DCP=$(BUILD_FOLDER)/ccl_offload_ex/ccl_offload_ex.runs/synth_1/packaged.dcp
 CCLO_XO=$(BUILD_FOLDER)/ccl_offload.xo
 
-all: $(CCLO_XO)
+OUTPUT_PRODUCT=$(CCLO_XO)
+ifeq ($(MODE), simdll)
+	OUTPUT_PRODUCT=$(CCLO_SIMDLL)
+endif
+
+all: $(OUTPUT_PRODUCT)
 
 .PHONY: xsa
 xsa: $(CCLO_XSA)
@@ -82,7 +103,7 @@ else ifeq ($(OPTIMIZATION),s)
    OPTIMIZATION_STRING = "Optimize for size (-Os)"
 endif
 
-.PHONY: elf simdll xo clean dcp
+.PHONY: elf xo clean dcp
 
 elf: $(CCLO_ELF)
 
@@ -90,12 +111,10 @@ $(CCLO_ELF): tcl/generate_sw.tcl tcl/associate_elf.tcl $(FW_SOURCES) $(CCLO_XSA)
 	cd $(BUILD_FOLDER) && xsct ../tcl/generate_sw.tcl ccl_offload ./ccl_offload.xsa ../fw $(OPTIMIZATION_STRING)
 	cd $(BUILD_FOLDER) && vivado -mode batch -source ../tcl/associate_elf.tcl -tclargs vitis_ws/ccl_offload_control/Debug/ccl_offload_control.elf
 
-simdll: $(CCLO_SIMDLL)
-
 $(CCLO_SIMDLL): tcl/generate_sim.tcl elf
 	$(MAKE) -C ../plugins DEVICE=$(FPGAPART)
-	vivado -mode batch -source $< -tclargs $(STACK_TYPE) $(EN_DMA) $(EN_ARITH) $(EN_COMPRESS) $(EN_EXT_KRNL) $(SIM_MEM_SIZE_LOG) $(SIM_MEM_LATENCY)
-	cd ccl_offload_ex/ccl_offload_ex.sim/sim_1/behav/xsim/ && ./compile.sh && ./elaborate.sh
+	cd $(BUILD_FOLDER) && vivado -mode batch -source ../tcl/generate_sim.tcl -tclargs $(STACK_TYPE) $(EN_DMA) $(EN_ARITH) $(EN_COMPRESS) $(EN_EXT_KRNL) $(SIM_MEM_SIZE_LOG) $(SIM_MEM_LATENCY)
+	cd $(BUILD_FOLDER)/ccl_offload_ex/ccl_offload_ex.sim/sim_1/behav/xsim/ && ./compile.sh && ./elaborate.sh
 
 dcp: $(CCLO_DCP)
 
