No arbiter unless using vadd kernel

--- a/test/refdesigns/Makefile
+++ b/test/refdesigns/Makefile
@@ -115,12 +115,12 @@ VPP_CONFIG := -t $(VPP_TARGET) --config $(CONFIGFILE)
 
 ADV_CMD :=
 IPREPO_CMD :=
-OTHER_XO := $(HOSTCTRL_XO) $(CLIENT_ARB_XO) $(SUM_XO) $(COMPRESSION_XO)
+OTHER_XO := $(HOSTCTRL_XO) $(SUM_XO) $(COMPRESSION_XO)
 
 GEN_CONFIG_FLAGS := 
 ifeq (vadd, $(USER_KERNEL))
 	GEN_CONFIG_FLAGS += --vadd
-	OTHER_XO += $(VADD_XO)
+	OTHER_XO += $(VADD_XO) $(CLIENT_ARB_XO)
 else
 	OTHER_XO += $(LOOPBACK_XO)
 endif
