Migrated to cppzmq

--- a/driver/xrt/CMakeLists.txt
+++ b/driver/xrt/CMakeLists.txt
@@ -120,7 +120,7 @@ target_link_libraries(accl PUBLIC xilinxopencl xrt_coreutil xrt_core)
 target_include_directories(accl PUBLIC $ENV{XILINX_XRT}/include)
 
 # ZMQ
-target_link_libraries(accl PUBLIC zmqpp zmq pthread)
+target_link_libraries(accl PUBLIC zmq pthread)
 
 # Json
 find_package(jsoncpp REQUIRED)
